Attempts to fix pointermove cancelling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Raleway', sans-serif;
   background-color: black;
   overflow: hidden;
+  touch-action: none;
 }
 
 button#seed {
